--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -1,4 +1,7 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* Fonts */
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
+
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +15,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +27,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -64,3 +67,116 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/* ////////// HOME PAGE \\\\\\\\\\\ */
+
+/* Styling Nav */
+.navbar {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	top: 0;
+	padding: 10px 5px;
+	text-align: center;
+	background: rgba(180, 10, 0, 0.9);
+	position: fixed;
+	z-index: 1;
+}
+.navbar img {
+	margin-right: 5%;
+}
+nav {
+	width: 68%;
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	border: solid 1px black;
+}
+nav a {
+	text-decoration: none;
+	color: lightgrey;
+	font-size: 20px;
+	margin-left: 7%;
+}
+nav a:hover {
+	color: grey;
+}
+
+
+/* Styling Header */
+header {
+	display: block;
+	margin: 0 auto;
+	padding-top: 100px;
+	text-align: center;
+}
+#header-section {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	line-height: 100%;
+	font-size: 50px;
+	text-align: center;
+}
+#header-section div {
+	margin-right: 15%;
+}
+#header-section a {
+	font-family: Bebas Neue;
+	text-decoration: none;
+	color: rgb(180, 10, 0);
+	border: solid 3px rgb(180, 10, 0);
+	padding: 5px;
+	font-size: 25px;
+}
+
+/* Styling Sections */
+.page {
+	display: block;
+	margin: 50px auto;
+	width: 80%;
+}
+.section {
+	display: flex;
+	width: 100%;
+	margin: 30px 0 30px 50%;
+	transform: translate(-50%);
+}
+.section1 {
+	margin-right: 5%;
+	text-align: left;
+}
+.section1 p {
+	text-align: justify;
+}
+.middle-img {
+	width: 100%;
+	display: block;
+	margin: 0 auto 30px;
+}
+.section2 {
+	margin-right: 5%;
+	text-align: left;
+}
+.section2 p {
+	text-align: justify;
+}
+.contact {
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+}
+.contact ul li {
+	margin-bottom: 20px;
+}
+
+hr {
+	border: solid 1px black;
+	background: black;
+}
+
+/* Styling Footer */
+footer {
+	text-align: center;
+	padding-bottom: 30px;
+}
